# ToppAuction

./: .sample_flaskenv  README.md  alembic-dev-downgrade.bat  alembic-dev-reset.bat  alembic-dev.bat  alembic-test.bat  app.py  pyproject.toml  requirements.txt  run.bat
app/: __init__.py  mlb_models.py  routes.py
app/api/: blueprint.py  util.py
app/api/data_routes/: manual_population.py
app/persistence/: id_fetcher.py  inserts.py  util.py
app/services/: account_management_services.py  orm_serializer.py
app/utils/: validators.py
app/views/: account_management_views.py
db_population_scripts/: data.py
migrations/: env.py
migrations/versions/: 1_init.py  20230626_initial_topp_tables.py
tests/: conftest.py  test_account_management_views.py
