[tool.poetry]
name = "ToppAuction"
version = "0.1.0"
description = "WhatNot auction advisor"
authors = ["Zach Bruennig"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask-Login = "^0.6.2"
Flask = "^2.2.3"
bleach = "^6.0.0"
SQLAlchemy = "^2.0.9"
alembic = "^1.10.3"
pytest = "^7.3.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
psycopg2 = "^2.9.6"
pydantic = "^1.10.7"
email-validator = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
